# auto-base-convert

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
auto_base_convert/: __init__.py  core.py
tests/: test_auto_base_convert.py
